[gd_scene load_steps=16 format=3 uid="uid://4ska7tq8a0x4"]

[ext_resource type="Script" uid="uid://d02n2esl34cog" path="res://Character/rock.gd" id="1_abyt7"]
[ext_resource type="Texture2D" uid="uid://p2c6vvbtknct" path="res://Character/Rock Legs/Basic Rock Legs/Left Leg.png" id="2_5fu52"]
[ext_resource type="Texture2D" uid="uid://bcbtm5qk8b1ww" path="res://Character/Rock Legs/Basic Rock Legs/Right Leg.png" id="3_gy6y1"]
[ext_resource type="Texture2D" uid="uid://dcn24uprhafhc" path="res://Character/Rock Bodies/Grey Rock Body Facing R.png" id="4_v8vsl"]
[ext_resource type="Texture2D" uid="uid://5k2y80fg4mbj" path="res://Character/Rock Bodies/Grey Rock Body Facing L.png" id="5_y6wf6"]
[ext_resource type="PackedScene" uid="uid://vni0rcthj7qx" path="res://Weapons/sciccors.tscn" id="6_n8yrp"]
[ext_resource type="Texture2D" uid="uid://d7s5veh8ibdj" path="res://Character/Rock Faces/Rock Face Alt 0 R.png" id="6_y6wf6"]
[ext_resource type="Texture2D" uid="uid://brog21uq4fulp" path="res://Character/Rock Faces/Rock Face Alt 0 L.png" id="7_xlw2t"]

[sub_resource type="Animation" id="Animation_5fu52"]
resource_name = "New Walk"

[sub_resource type="Animation" id="Animation_v8vsl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Right_Leg_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Left_Leg_sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Rock_Body_Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -26)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Rock_Face_Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -24)]
}

[sub_resource type="Animation" id="Animation_n8yrp"]
resource_name = "Walk Animation"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Left_Leg_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0997802, 0.2, 0.3),
"transitions": PackedFloat32Array(0.225, 0.225, 0.225, 0.225),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0), Vector2(0, -25)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Right_Leg_sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(0.225, 0.225, 0.225, 0.225),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -25), Vector2(0, 0), Vector2(0, -10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Rock_Body_Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.200045, 0.3),
"transitions": PackedFloat32Array(0.225314, 0.225, 0.225, 0.225),
"update": 0,
"values": [Vector2(0, -26), Vector2(0, -36), Vector2(0, -26), Vector2(0, -36)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Rock_Face_Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.200045, 0.3),
"transitions": PackedFloat32Array(0.225, 0.225, 0.225, 0.225),
"update": 0,
"values": [Vector2(0, -24), Vector2(0, -34), Vector2(0, -24), Vector2(0, -34)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y6wf6"]
_data = {
&"New Walk": SubResource("Animation_5fu52"),
&"RESET": SubResource("Animation_v8vsl"),
&"Walk Animation": SubResource("Animation_n8yrp")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_xlw2t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_v8vsl")
}, {
"duration": 1.0,
"texture": ExtResource("5_y6wf6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_wcs0f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_y6wf6")
}, {
"duration": 1.0,
"texture": ExtResource("7_xlw2t")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gy6y1"]
radius = 87.0517

[node name="Rock" type="CharacterBody2D"]
script = ExtResource("1_abyt7")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.35, 0.35)

[node name="Spawner_E" type="Marker2D" parent="."]
position = Vector2(1700, 0)

[node name="Spawner_N" type="Marker2D" parent="."]
position = Vector2(0, -1200)

[node name="Spawner_S" type="Marker2D" parent="."]
position = Vector2(0, 1200)

[node name="Spawner_W" type="Marker2D" parent="."]
position = Vector2(-1684, 0)

[node name="Spawner_NE" type="Marker2D" parent="."]
position = Vector2(1696, -1234)

[node name="Spawner_SE" type="Marker2D" parent="."]
position = Vector2(1677, 1249)

[node name="Spawner_NW" type="Marker2D" parent="."]
position = Vector2(-1684, -1200)

[node name="Spawner_SW" type="Marker2D" parent="."]
position = Vector2(-1646, 1090)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_y6wf6")
}

[node name="Left_Leg_sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_5fu52")

[node name="Right_Leg_sprite" type="Sprite2D" parent="."]
texture = ExtResource("3_gy6y1")

[node name="Rock_Body_Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -26)
sprite_frames = SubResource("SpriteFrames_xlw2t")
frame_progress = 0.582209

[node name="Rock_Face_Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -24)
sprite_frames = SubResource("SpriteFrames_wcs0f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, -27)
scale = Vector2(1, 1)
shape = SubResource("CircleShape2D_gy6y1")

[node name="scis_pivot" type="Sprite2D" parent="."]
scale = Vector2(1.31129, 1.31129)
offset = Vector2(24.4035, -5.33827)

[node name="Sciccors" parent="scis_pivot" instance=ExtResource("6_n8yrp")]
position = Vector2(164.724, -35.08)
scale = Vector2(1, 1)
